decreasing the z-index property from nav-bar when fixed to the top on the .affix rule

--- a/bootstrap_admin/static/admin/css/changelists.css
+++ b/bootstrap_admin/static/admin/css/changelists.css
@@ -19,7 +19,8 @@
     color: #fff;
 }
 #changelist .affix.navbar-fixed-top{
-    top: 42px;
+    top: 40px;
+    z-index: 1029;
 }
 .pagination{
     margin: 0;
